WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
103098
[BlackBerry] Meta viewport can't be changed dynamically
https://bugs.webkit.org/show_bug.cgi?id=103098
Summary
[BlackBerry] Meta viewport can't be changed dynamically
Jacky Jiang
Reported
2012-11-22 17:45:01 PST
PR:237072
Attachments
Patch
(1.94 KB, patch)
2012-11-22 18:08 PST
,
Jacky Jiang
rwlbuis
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Jacky Jiang
Comment 1
2012-11-22 18:08:22 PST
Created
attachment 175720
[details]
Patch
Rob Buis
Comment 2
2012-11-22 19:59:35 PST
Comment on
attachment 175720
[details]
Patch LGTM
Antonio Gomes
Comment 3
2012-11-23 04:36:03 PST
Comment on
attachment 175720
[details]
Patch View in context:
https://bugs.webkit.org/attachment.cgi?id=175720&action=review
I think it could have a comment on that of the changed block.
> Source/WebKit/blackberry/Api/WebPage.cpp:3467 > + bool isLoadFinished = loadState() == WebKit::WebPagePrivate::Finished;
nit: is the namespace needed?
> Source/WebKit/blackberry/Api/WebPage.cpp:3472 > + if (loadState() == WebKit::WebPagePrivate::Committed || isLoadFinished)
ditto
Jacky Jiang
Comment 4
2012-11-23 07:49:15 PST
(In reply to
comment #3
)
> (From update of
attachment 175720
[details]
) > View in context:
https://bugs.webkit.org/attachment.cgi?id=175720&action=review
> > I think it could have a comment on that of the changed block. > > > Source/WebKit/blackberry/Api/WebPage.cpp:3467 > > + bool isLoadFinished = loadState() == WebKit::WebPagePrivate::Finished; > > nit: is the namespace needed? > > > Source/WebKit/blackberry/Api/WebPage.cpp:3472 > > + if (loadState() == WebKit::WebPagePrivate::Committed || isLoadFinished) > > ditto
Nice catch, thanks Antonio! I will update these and push directly.
Jacky Jiang
Comment 5
2012-11-23 08:32:54 PST
Committed
r135615
: <
http://trac.webkit.org/changeset/135615
>
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug