[BlackBerry] Meta viewport can't be changed dynamically https://bugs.webkit.org/show_bug.cgi?id=103098

Patch by Jacky Jiang  <zhajiang@rim.com>.
Reviewed by Rob Buis.
Internally reviewed by Arvid Nilsson.

PR: 237072
Reset m_userPerformedManualZoom and enable
m_shouldZoomToInitialScaleAfterLoadFinished so that we can relayout the
page and zoom it to fit the screen when we dynamically change the meta
viewport after the load is finished.

* Api/WebPage.cpp:
(BlackBerry::WebKit::WebPagePrivate::dispatchViewportPropertiesDidChange):

Canonical link: https://commits.webkit.org/121276@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@135615 268f45cc-cd09-0410-ab3c-d52691b4dbfc